# workers

./: .eslintrc.js  .gitignore  .pnp.cjs  .yarnrc.yml  Cargo.toml  package.json  tsconfig.json
.github/actions/configure/: action.yml
.github/workflows/: ci.yml  liveDeploy.yml  testDeploy.yml
.husky/: pre-push
.yarn/versions/: e362b8de.yml
api/: Cargo.toml  api.http  http-client.private.env.json  package.json  wrangler.toml
api/src/: api_error.rs  api_result.rs  auth.rs  challenges.rs  durable.rs  foodnotes.rs  jwt.rs  lib.rs  oauth.rs  place.rs  req.rs  res.rs  users.rs
api/src/utils/: uid.rs
auth/: Cargo.toml  auth.http  package.json  wrangler.toml
auth/src/: authorize.rs  lib.rs
challenges/: Cargo.toml  challenges.http  package.json  wrangler.toml
challenges/src/: lib.rs
devops/deploy-cli/: package.json  tsconfig.esm.json
devops/deploy-cli/src/: DeployCommand.ts  DeployerCommand.ts  Env.ts  cli.ts  getVersion.ts  index.ts  wranglerConfig.ts
place/: Cargo.toml  package.json  place.http  wrangler.toml
place/src/: lib.rs
shared/: Cargo.toml  package.json
shared/src/: api_error.rs  auth.rs  challenges.rs  jwt.rs  lib.rs  oauth.rs  place.rs  req.rs  routes.rs  users.rs  users_store.rs  utils.rs
shared/src/utils/: mod.rs
users/: Cargo.toml  package.json  users.http  wrangler.toml
users/src/: create_user.rs  lib.rs
