[package]
name = "api"
version = "0.0.0"
authors = ["Seokju Na <seokju.me@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.67"
nanoid = "0.4.0"
async-trait = "0.1.52"
thiserror = "1.0"
jwt-compact = { version = "0.5", default-features = false, features = ["clock", "ed25519-compact", "with_rsa", "k256"] }
chrono = { version = "0.4", features = ["wasmbind"] }
# note: for wasm support
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
