[package]
name = "shared"
version = "0.0.0"
authors = ["Seokju Na <seokju.me@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = "0.0.8"
serde = "1.0.117"
serde_json = "1.0.67"
cfg-if = "0.1.2"
nanoid = "0.4.0"
async-trait = "0.1.52"
thiserror = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
